--- a/K23069_09.md
+++ b/K23069_09.md
@@ -20,31 +20,65 @@ Organization URL:
 
 ## ４. Git, GitHubに関する調査
 ### 4-1. Gitを始めとしたバージョン管理システムを利用することによるメリットはなにか
-
+バージョン管理システムを利用することで、ファイルの変更履歴を保存・追跡でき、過去の状態への復元が可能になる。これにより、チームでの並行作業や変更の統合が効率化し、作業ミスや衝突のリスクを低減する。また、誰がどのような変更を行ったかを明確に把握できるため、開発の透明性が向上する。
 
 ### 4-2. Gitにおけるキーワード「clone」「commit」「push」「branch」「fetch」「pull」「merge」「rebase」についてそれぞれ何をするものか (他者に説明できるよう、わかりやすく簡潔な文章で表すこと)
 #### 「clone」
-
+リモートリポジトリ（GitHubなど）をローカル環境にコピーして、作業環境を構築するコマンド
 
 #### 「commit」
-
+変更内容を「スナップショット」としてローカルリポジトリに記録する操作。メッセージを添えて変更の意図を残せる。
 
 #### 「push」
-
+ローカルリポジトリの変更をリモートリポジトリに送信して共有する操作。
 
 #### 「branch」
-
+作業の「枝分かれ」を作る機能。主に新しい機能追加や修正を他の部分に影響させずに進めるために使用。
 
 #### 「fetch」
-
+リモートリポジトリの変更をローカルに取得する操作。ただし、自動的に統合はされない。
 
 #### 「pull」
-
+リモートリポジトリの変更を取得し、ローカルリポジトリに統合する操作（fetch＋merge）。
 
 #### 「merge」
-
+他のブランチの変更内容を現在のブランチに統合する操作。ブランチを終了する際によく使う。
 
 #### 「rebase」
-
+変更履歴を再構築して整理する操作。ブランチの分岐点を変更することで、履歴が直線的になり、読みやすくなる。
 
 ### 4-3. プロジェクト進行に、Pull Requestを用いたGitHub Flowを採用することで、解決できるチーム開発での問題はなにか (実際にGitHub Flowで作業する手順も説明できる範囲でする)
+Pull Requestを用いたGitHub Flowが解決できる問題
+1.コードの品質向上
+Pull Requestを通じたレビューで、バグや設計ミスを早期に発見できる。
+
+2.作業の衝突防止
+個別ブランチで作業し、Pull Requestで統合することで、直接の競合を防ぐ。
+
+3.変更の透明性と共有
+変更内容や背景をチーム全体に共有できるため、作業の見通しがよくなる。
+
+4.安定したメインブランチの維持
+メインブランチに直接変更を加えないことで、常に動作するコードベースを保てる。
+
+GitHub Flowでの作業手順
+1.ブランチ作成
+メインブランチから新しいブランチを作成（例: feature/add-login）。
+
+2.作業とコミット
+ブランチ内で開発し、変更をコミット。
+
+3.プッシュ
+ローカルブランチをリモートリポジトリへプッシュ。
+
+4.Pull Request作成
+GitHubでPull Requestを作成し、レビューを依頼。
+
+5.レビューと修正
+他メンバーのレビューを受けて修正を行う。
+
+6.マージ
+レビュー完了後、変更をメインブランチにマージ。
+
+7.不要ブランチの削除
+作業が終わったブランチを削除し、リポジトリを整理する。
