--- a/K23069_09.md
+++ b/K23069_09.md
@@ -7,7 +7,7 @@ Account URL: https://github.com/k23069
 
 ## 2. グループのOrganizationのURL
 
-Organization URL: 
+Organization URL: https://github.com/2024AIT-OOP2-G06/Diary
 
 ## 3. 作成した日記リポジトリのコミットログ
 
